get_example = executable('get', 'get.c',
    dependencies : [glib_dep, libsoup_dep])

simple_httpd_example = executable('simple_httpd', 'simple-httpd.c',
    dependencies : [glib_dep, libsoup_dep])

simple_proxy_example = executable('simple_proxy', 'simple-proxy.c',
    dependencies : [glib_dep, libsoup_dep])
